--- a/package.json
+++ b/package.json
@@ -16,15 +16,24 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@tonstack/xed25519": "^0.0.2",
+    "@noble/ed25519": "^1.6.1",
+    "@types/aes-js": "^3.1.1",
+    "@types/crypto-js": "^4.1.1",
     "@vitejs/plugin-vue": "^2.3.3",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
     "@vitejs/plugin-vue2": "^1.1.2",
+    "aes-js": "^3.1.2",
     "axios": "^0.24.0",
     "axios-retry": "^3.2.4",
     "bn.js": "^5.2.1",
     "buffer": "^6.0.3",
+    "crypto-hash": "^2.0.1",
+    "crypto-js": "^4.1.1",
     "curve25519-js": "^0.0.4",
+    "hash.js": "^1.1.7",
+    "isomorphic-webcrypto": "^2.3.8",
+    "isomorphic-ws": "^5.0.0",
+    "noble-ed25519": "^1.2.6",
     "qrcode.vue": "^1.7.0",
     "randombytes": "^2.1.0",
     "rollup-plugin-node-builtins": "^2.1.2",
@@ -42,17 +51,18 @@
     "vue-i18n": "^9.1.10",
     "vue-mugen-scroll": "^0.2.6",
     "vue-router": "^4.1.1",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "websocket": "^1.0.34",
+    "ws": "^8.8.0"
   },
   "devDependencies": {
-    "@babel/plugin-transform-runtime": "^7.17.10",
-    "@babel/preset-env": "^7.16.11",
     "@symfony/webpack-encore": "^1.8.1",
     "dotenv": "^8.2.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "sass": "^1.49.0",
     "sass-loader": "^12.4.0",
+    "ts-node": "^10.9.1",
     "vue-loader": "^17.0.0",
     "vue-template-compiler": "^2.7.4"
   },
