--- a/package.json
+++ b/package.json
@@ -30,22 +30,31 @@
     "crypto-hash": "^2.0.1",
     "crypto-js": "^4.1.1",
     "curve25519-js": "^0.0.4",
+    "dataloader": "^2.1.0",
+    "ethjs-unit": "^0.1.6",
+    "fp-ts": "^2.12.1",
     "hash.js": "^1.1.7",
+    "io-ts": "^2.2.16",
+    "io-ts-reporters": "^2.0.1",
     "isomorphic-webcrypto": "^2.3.8",
     "isomorphic-ws": "^5.0.0",
     "noble-ed25519": "^1.2.6",
     "qrcode.vue": "^1.7.0",
     "randombytes": "^2.1.0",
+    "rollup-plugin-analyzer": "^4.0.0",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-polyfills": "^0.2.1",
     "rollup-plugin-polyfill-node": "^0.10.1",
+    "rollup-plugin-visualizer": "^5.7.0",
+    "symbol.inspect": "^1.0.1",
     "timeago.js": "^4.0.2",
     "ton": "file:./src/ton",
+    "ton-crypto": "^3.2.0",
     "ton-tl": "^0.2.2",
     "ts-loader": "^9.3.1",
     "tweetnacl": "^1.0.3",
     "typescript": "^4.7.4",
-    "vite": "^2.9.14",
+    "vite": "^3.0.0",
     "vue": "^3.2.37",
     "vue-clipboard2": "^0.3.3",
     "vue-i18n": "^9.1.10",
@@ -57,9 +66,19 @@
   },
   "devDependencies": {
     "@symfony/webpack-encore": "^1.8.1",
+    "@typescript-eslint/eslint-plugin": "^5.30.6",
+    "@typescript-eslint/parser": "^5.30.6",
     "dotenv": "^8.2.0",
+    "eslint": "^8.19.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.4",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.0.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "prettier": "^2.7.1",
     "sass": "^1.49.0",
     "sass-loader": "^12.4.0",
     "ts-node": "^10.9.1",
