--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "crypto-js": "^4.1.1",
     "curve25519-js": "^0.0.4",
     "dataloader": "^2.1.0",
+    "dexie": "^3.2.2",
     "ethjs-unit": "^0.1.6",
     "fp-ts": "^2.12.1",
     "hash.js": "^1.1.7",
