--- a/tsconfig.json
+++ b/tsconfig.json
@@ -105,7 +105,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
-      "~/*": ["./src/js/*"]
+      "~/*": ["./src/*"]
     }
   },
   "include": ["./src/**/*.ts", "./src/**/*.js", "./src/**/*.vue"]
