--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vitejs/plugin-vue": "^2.3.3",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
     "@vitejs/plugin-vue2": "^1.1.2",
+    "adnl": "^0.0.9",
     "aes-js": "^3.1.2",
     "axios": "^0.24.0",
     "axios-retry": "^3.2.4",
