--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,16 @@
 {
   "rewrites": [
     { "source": "/address/:address", "destination": "/" }
+  ],
+  "headers": [
+    {
+      "source": "/assets/vm-exec.*.wasm",
+      "headers" : [
+        {
+          "key" : "Cache-Control",
+          "value" : "public, max-age=31536000"
+        }
+      ]
+    }
   ]
 }
