--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
   ],
   "headers": [
     {
-      "source": "/assets/vm-exec.*.wasm",
+      "source": "/assets/vm-exec.(.*).wasm",
       "headers" : [
         {
           "key" : "Cache-Control",
