--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "tweetnacl": "^1.0.3",
     "typescript": "^4.7.4",
     "vite": "^3.0.0",
+    "vite-svg-loader": "^3.4.0",
     "vue": "^3.2.37",
     "vue-clipboard2": "^0.3.3",
     "vue-i18n": "^9.1.10",
@@ -65,6 +66,7 @@
     "@symfony/webpack-encore": "^1.8.1",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
+    "autoprefixer": "^10.4.7",
     "dotenv": "^8.2.0",
     "eslint": "^8.19.0",
     "eslint-config-prettier": "^8.5.0",
@@ -76,9 +78,11 @@
     "eslint-plugin-vue": "^9.2.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "sass": "^1.49.0",
     "sass-loader": "^12.4.0",
+    "tailwindcss": "^3.1.6",
     "ts-node": "^10.9.1",
     "vue-loader": "^17.0.0",
     "vue-template-compiler": "^2.7.4"
