--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@types/crypto-js": "^4.1.1",
     "@vitejs/plugin-vue": "^2.3.3",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
-    "@vitejs/plugin-vue2": "^1.1.2",
+    "@vueuse/core": "^8.9.4",
     "adnl": "^0.0.9",
     "aes-js": "^3.1.2",
     "axios": "^0.24.0",
@@ -36,7 +36,7 @@
     "isomorphic-webcrypto": "^2.3.8",
     "isomorphic-ws": "^5.0.0",
     "noble-ed25519": "^1.2.6",
-    "qrcode.vue": "^1.7.0",
+    "qrcode.vue": "^3.3.3",
     "randombytes": "^2.1.0",
     "rollup-plugin-analyzer": "^4.0.0",
     "rollup-plugin-node-builtins": "^2.1.2",
@@ -54,7 +54,6 @@
     "vite": "^3.0.0",
     "vite-svg-loader": "^3.4.0",
     "vue": "^3.2.37",
-    "vue-clipboard2": "^0.3.3",
     "vue-i18n": "^9.1.10",
     "vue-mugen-scroll": "^0.2.6",
     "vue-router": "^4.1.1",
