--- a/package.json
+++ b/package.json
@@ -48,17 +48,17 @@
     "timeago.js": "^4.0.2",
     "ton": "file:./src/ton",
     "ton-crypto": "^3.2.0",
+    "ton-lite-client": "npm:@truecarry/ton-lite-client@^1.5.10",
     "ton-tl": "^0.2.2",
     "ts-loader": "^9.3.1",
     "tweetnacl": "^1.0.3",
     "typescript": "^4.7.4",
-    "vite": "^3.0.0",
+    "vite": "^3.0.4",
     "vite-svg-loader": "^3.4.0",
     "vue": "^3.2.37",
-    "vue-i18n": "^9.1.10",
+    "vue-i18n": "^9.2.2",
     "vue-mugen-scroll": "^0.2.6",
-    "vue-router": "^4.1.1",
-    "vuex": "^4.0.2",
+    "vue-router": "^4.1.3",
     "websocket": "^1.0.34",
     "ws": "^8.8.0"
   },
