--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "vue-i18n": "^9.2.2",
     "vue-mugen-scroll": "^0.2.6",
     "vue-router": "^4.1.3",
+    "vue-toastification": "^2.0.0-rc.5",
     "websocket": "^1.0.34",
     "ws": "^8.8.0"
   },
