--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "tweetnacl": "^1.0.3",
     "typescript": "^4.7.4",
     "vite": "^3.0.4",
+    "vite-plugin-chunk-split": "^0.3.0",
     "vite-svg-loader": "^3.4.0",
     "vue": "^3.2.37",
     "vue-i18n": "^9.2.2",
