--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@intlify/vite-plugin-vue-i18n": "^6.0.1",
     "@noble/ed25519": "^1.6.1",
+    "@ton.org/func-js": "^0.1.2",
     "@types/aes-js": "^3.1.1",
     "@types/crypto-js": "^4.1.1",
     "@vitejs/plugin-vue": "^2.3.3",
@@ -59,6 +60,7 @@
     "vite-svg-loader": "^3.4.0",
     "vue": "^3.2.37",
     "vue-i18n": "^9.2.2",
+    "vue-monaco": "^1.2.2",
     "vue-mugen-scroll": "^0.2.6",
     "vue-router": "^4.1.3",
     "vue-toastification": "^2.0.0-rc.5",
@@ -66,7 +68,7 @@
     "ws": "^8.8.0"
   },
   "devDependencies": {
-    "@symfony/webpack-encore": "^1.8.1",
+    "@symfony/webpack-encore": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
     "autoprefixer": "^10.4.7",
