--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@intlify/vite-plugin-vue-i18n": "^6.0.1",
+    "@kouts/vue-modal": "^3.0.7",
     "@noble/ed25519": "^1.6.1",
     "@ton.org/func-js": "^0.1.2",
     "@types/aes-js": "^3.1.1",
