--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "io-ts-reporters": "^2.0.1",
     "isomorphic-webcrypto": "^2.3.8",
     "isomorphic-ws": "^5.0.0",
+    "knex": "^2.3.0",
     "noble-ed25519": "^1.2.6",
     "pinia": "^2.0.17",
     "qrcode.vue": "^3.3.3",
