Try to use public contract executor

--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "rollup-plugin-visualizer": "^5.7.0",
     "symbol.inspect": "^1.0.1",
     "timeago.js": "^4.0.2",
-    "ton": "file:./src/ton",
+    "ton": "^12.1.5",
+    "ton-contract-executor": "^0.6.0",
     "ton-crypto": "^3.2.0",
     "ton-lite-client": "npm:@truecarry/ton-lite-client@^1.6.1",
     "ton-tl": "^0.2.2",
