--- a/package.json
+++ b/package.json
@@ -50,8 +50,9 @@
     "symbol.inspect": "^1.0.1",
     "timeago.js": "^4.0.2",
     "ton": "file:./src/ton",
+    "ton-core": "^0.46.0",
     "ton-crypto": "^3.2.0",
-    "ton-lite-client": "npm:@truecarry/ton-lite-client@^1.6.1",
+    "ton-lite-client": "npm:@truecarry/ton-lite-client@2.0.0-beta.2",
     "ton-tl": "^0.2.2",
     "ts-loader": "^9.3.1",
     "tweetnacl": "^1.0.3",
