--- a/tsconfig.json
+++ b/tsconfig.json
@@ -109,5 +109,12 @@
     }
   },
   "include": ["./src/**/*.ts", "./src/**/*.js", "./src/**/*.vue"],
+  "ts-node": {
+    // these options are overrides used only by ts-node
+    // same as our --compilerOptions flag and our TS_NODE_COMPILER_OPTIONS environment variable
+    "compilerOptions": {
+      "module": "commonjs"
+    }
+  },
   "references": [{ "path": "./tsconfig.node.json" }]
 }
