--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@intlify/vite-plugin-vue-i18n": "^6.0.1",
     "@kouts/vue-modal": "^3.0.7",
     "@noble/ed25519": "^1.6.1",
+    "@ton-community/sandbox": "^0.4.0",
     "@ton.org/func-js": "^0.1.2",
     "@types/aes-js": "^3.1.1",
     "@types/crypto-js": "^4.1.1",
@@ -49,7 +50,6 @@
     "rollup-plugin-visualizer": "^5.7.0",
     "symbol.inspect": "^1.0.1",
     "timeago.js": "^4.0.2",
-    "ton": "file:./src/ton",
     "ton-core": "^0.46.0",
     "ton-crypto": "^3.2.0",
     "ton-lite-client": "npm:@truecarry/ton-lite-client@2.0.0-beta.2",
@@ -59,7 +59,7 @@
     "typescript": "^4.7.4",
     "vite": "^3.0.4",
     "vite-plugin-chunk-split": "^0.3.0",
-    "vite-svg-loader": "^3.4.0",
+    "vite-svg-loader": "^4.0.0",
     "vue": "^3.2.37",
     "vue-i18n": "^9.2.2",
     "vue-monaco": "^1.2.2",
