--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "ts-loader": "^9.3.1",
     "tweetnacl": "^1.0.3",
     "typescript": "^4.7.4",
+    "v3-infinite-loading": "^1.2.2",
     "vite": "^3.0.4",
     "vite-plugin-chunk-split": "^0.3.0",
     "vite-svg-loader": "^4.0.0",
