--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@intlify/vite-plugin-vue-i18n": "^6.0.1",
+    "@intlify/unplugin-vue-i18n": "^0.11.0",
     "@kouts/vue-modal": "^3.0.7",
     "@noble/ed25519": "^1.6.1",
     "@ton-community/sandbox": "^0.4.0",
     "@ton.org/func-js": "^0.1.2",
     "@types/aes-js": "^3.1.1",
     "@types/crypto-js": "^4.1.1",
-    "@vitejs/plugin-vue": "^2.3.3",
+    "@vitejs/plugin-vue": "^4.2.3",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
     "@vueuse/core": "^8.9.4",
     "adnl": "^0.0.9",
@@ -37,9 +37,8 @@
     "hash.js": "^1.1.7",
     "io-ts": "^2.2.16",
     "io-ts-reporters": "^2.0.1",
-    "isomorphic-webcrypto": "^2.3.8",
     "isomorphic-ws": "^5.0.0",
-    "noble-ed25519": "^1.2.6",
+    "lru_map": "^0.4.1",
     "pinia": "^2.0.17",
     "qrcode.vue": "^3.3.3",
     "randombytes": "^2.1.0",
@@ -47,18 +46,18 @@
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-polyfills": "^0.2.1",
     "rollup-plugin-polyfill-node": "^0.10.1",
-    "rollup-plugin-visualizer": "^5.7.0",
+    "rollup-plugin-visualizer": "^5.9.0",
     "symbol.inspect": "^1.0.1",
     "timeago.js": "^4.0.2",
-    "ton-core": "^0.46.0",
+    "ton-core": "^0.48.0",
     "ton-crypto": "^3.2.0",
-    "ton-lite-client": "npm:@truecarry/ton-lite-client@2.0.0-beta.2",
+    "ton-lite-client": "^2.1.0",
     "ton-tl": "^0.2.2",
     "ts-loader": "^9.3.1",
     "tweetnacl": "^1.0.3",
     "typescript": "^4.7.4",
     "v3-infinite-loading": "^1.2.2",
-    "vite": "^3.0.4",
+    "vite": "^4.3.9",
     "vite-plugin-chunk-split": "^0.3.0",
     "vite-svg-loader": "^4.0.0",
     "vue": "^3.2.37",
@@ -71,7 +70,6 @@
     "ws": "^8.8.0"
   },
   "devDependencies": {
-    "@symfony/webpack-encore": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
     "autoprefixer": "^10.4.7",
