--- a/package.json
+++ b/package.json
@@ -13,85 +13,85 @@
   },
   "dependencies": {
     "@intlify/unplugin-vue-i18n": "^0.11.0",
-    "@kouts/vue-modal": "^3.0.7",
-    "@noble/ed25519": "^1.6.1",
-    "@ton-community/sandbox": "^0.4.0",
-    "@ton.org/func-js": "^0.1.2",
+    "@kouts/vue-modal": "^3.0.8",
+    "@noble/ed25519": "^2.0.0",
+    "@ton-community/sandbox": "^0.11.0",
+    "@ton.org/func-js": "^0.1.3",
     "@types/aes-js": "^3.1.1",
     "@types/crypto-js": "^4.1.1",
     "@vitejs/plugin-vue": "^4.2.3",
-    "@vitejs/plugin-vue-jsx": "^1.3.10",
-    "@vueuse/core": "^8.9.4",
-    "adnl": "^0.0.9",
+    "@vitejs/plugin-vue-jsx": "^3.0.1",
+    "@vueuse/core": "^10.1.2",
+    "adnl": "^1.0.3",
     "aes-js": "^3.1.2",
-    "axios": "^0.24.0",
-    "axios-retry": "^3.2.4",
+    "axios": "^1.4.0",
+    "axios-retry": "^3.5.0",
     "bn.js": "^5.2.1",
     "buffer": "^6.0.3",
     "crypto-hash": "^2.0.1",
     "crypto-js": "^4.1.1",
     "curve25519-js": "^0.0.4",
-    "dataloader": "^2.1.0",
-    "dexie": "^3.2.2",
-    "fp-ts": "^2.12.1",
+    "dataloader": "^2.2.2",
+    "dexie": "^3.2.4",
+    "fp-ts": "^2.16.0",
     "hash.js": "^1.1.7",
-    "io-ts": "^2.2.16",
+    "io-ts": "^2.2.20",
     "io-ts-reporters": "^2.0.1",
     "isomorphic-ws": "^5.0.0",
     "lru_map": "^0.4.1",
-    "pinia": "^2.0.17",
-    "qrcode.vue": "^3.3.3",
+    "pinia": "^2.1.3",
+    "qrcode.vue": "^3.4.0",
     "randombytes": "^2.1.0",
     "rollup-plugin-analyzer": "^4.0.0",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-polyfills": "^0.2.1",
-    "rollup-plugin-polyfill-node": "^0.10.1",
+    "rollup-plugin-polyfill-node": "^0.12.0",
     "rollup-plugin-visualizer": "^5.9.0",
-    "symbol.inspect": "^1.0.1",
+    "symbol.inspect": "^1.0.3",
     "timeago.js": "^4.0.2",
-    "ton-core": "^0.48.0",
+    "ton-core": "^0.49.1",
     "ton-crypto": "^3.2.0",
     "ton-lite-client": "^2.1.0",
-    "ton-tl": "^0.2.2",
-    "ts-loader": "^9.3.1",
+    "ton-tl": "^1.0.1",
+    "ts-loader": "^9.4.3",
     "tweetnacl": "^1.0.3",
-    "typescript": "^4.7.4",
+    "typescript": "^5.1.3",
     "v3-infinite-loading": "^1.2.2",
     "vite": "^4.3.9",
-    "vite-plugin-chunk-split": "^0.3.0",
+    "vite-plugin-chunk-split": "^0.4.7",
     "vite-svg-loader": "^4.0.0",
-    "vue": "^3.2.37",
+    "vue": "^3.3.4",
     "vue-i18n": "^9.2.2",
     "vue-monaco": "^1.2.2",
     "vue-mugen-scroll": "^0.2.6",
-    "vue-router": "^4.1.3",
-    "vue-toastification": "^2.0.0-rc.5",
+    "vue-router": "^4.2.2",
+    "vue-toastification": "2.0.0-rc.5",
     "websocket": "^1.0.34",
-    "ws": "^8.8.0"
+    "ws": "^8.13.0"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.30.6",
-    "@typescript-eslint/parser": "^5.30.6",
-    "autoprefixer": "^10.4.7",
-    "dotenv": "^8.2.0",
-    "eslint": "^8.19.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.2.4",
+    "@typescript-eslint/eslint-plugin": "^5.59.8",
+    "@typescript-eslint/parser": "^5.59.8",
+    "autoprefixer": "^10.4.14",
+    "dotenv": "^16.1.3",
+    "eslint": "^8.42.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^16.0.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-vue": "^9.2.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-vue": "^9.14.1",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.5.0",
-    "postcss": "^8.4.14",
-    "prettier": "^2.7.1",
-    "sass": "^1.49.0",
-    "sass-loader": "^12.4.0",
-    "tailwindcss": "^3.1.6",
+    "html-webpack-plugin": "^5.5.1",
+    "postcss": "^8.4.24",
+    "prettier": "^2.8.8",
+    "sass": "^1.62.1",
+    "sass-loader": "^13.3.1",
+    "tailwindcss": "^3.3.2",
     "ts-node": "^10.9.1",
-    "vue-loader": "^17.0.0",
-    "vue-template-compiler": "^2.7.4"
+    "vue-loader": "^17.2.2",
+    "vue-template-compiler": "^2.7.14"
   },
   "engines": {
     "node": ">=16.0.0"
